compile-tests/split_then_view_mut.stderr
error[E0502]: cannot borrow `img` as mutable because it is also borrowed as immutable
 --> compile-tests/split_then_view_mut.rs:6:21
  |
5 |     let (view_a, view_b) = img.split_x_at(0).unwrap();
  |                            ----------------- immutable borrow occurs here
6 |     let _view_mut = img.view_mut(Rect::empty((0, 0)));
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
7 |
8 |     let _ = view_a.pixel((0, 0));
  |             -------------------- immutable borrow later used here
